--- a/style.css
+++ b/style.css
@@ -128,6 +128,17 @@ body {
         padding-left: 28px;
     }
 }
+@media ( max-width: 768px) {
+  .cntBox img {
+    margin-top: 15px;
+    height: 315px;
+    padding-left: 40px;
+  }
+  .cntTxt {
+    padding: 10px;
+  }
+}
+
 @keyframes bounce {
     0% {
       transform: translateY(0);
